adjusting files to create jar file