@@ -8,6 +8,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
+        <javafx.runtime.path>${env.JAVAFX_HOME}/lib</javafx.runtime.path>
+         <javafx.version>13</javafx.version>
     </properties>
     <dependencies>
         <dependency>
@@ -48,11 +50,30 @@
                 <version>0.0.6</version>
                 <executions>
                     <execution>
+                        <id>default-cli</id>
+                        <configuration>
+                            <mainClass>com.example.SuperMain</mainClass>
+                            <jvmArgs>
+                                <arg>--module-path</arg>
+                                <arg>${javafx.runtime.path}</arg>
+                                <arg>--add-modules</arg>
+                                <arg>javafx.controls,javafx.fxml</arg>
+                            </jvmArgs>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>0.0.6</version>
+                <executions>
+                    <execution>
                         <!-- Default configuration for running -->
                         <!-- Usage: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.example.App</mainClass>
+                            <mainClass>com.example.SuperMain</mainClass>
                         </configuration>
                     </execution>
                 </executions>
@@ -69,6 +90,28 @@
                 </execution>
             </executions>
         </plugin>
-        </plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>3.2.4</version>
+                <executions>
+                    <execution>
+                    <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <shadedArtifactAttached>true</shadedArtifactAttached>
+                            <transformers>
+                            <transformer implementation=
+                                                "org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                            <mainClass>com.example.SuperMain</mainClass>
+                            </transformer>
+                            </transformers>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+    </plugins>
     </build>
 </project>
